--- a/front-automotores/src/app/shared/item/item.html
+++ b/front-automotores/src/app/shared/item/item.html
@@ -2,5 +2,6 @@
   @for (key of getObjectKeys(item); track $index) {
     <h3>{{key}}: {{item[key]}}</h3>
   }
-  <button class="btn btn-danger"><i class="bi bi-trash"></i></button>
+  <!-- TODO: descomentar cuando esten implementados los delete -->
+  <!-- <button class="btn btn-danger"><i class="bi bi-trash"></i></button> -->
 }
